--- a/simple-date-parsing.cabal
+++ b/simple-date-parsing.cabal
@@ -1,5 +1,5 @@
 name:                simple-date-parsing
-version:             1.0.0.0
+version:             1.0.1.0
 synopsis:            Parsing of simple relative dates
 description:         Please see README.md
 homepage:            http://github.com/davidpdrsn/simple-date-parsing
@@ -19,6 +19,7 @@ library
   ghc-options:         -Wall -O2
   hs-source-dirs:      src
   exposed-modules:     Data.Date.SimpleParse
+                     , Data.Date.SimpleParse.Internal
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , time
